// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr ensurePr should add assignees and reviewers to existing PR 1`] = `Array []`;

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 1`] = `
Array [
  Array [
    undefined,
    Array [
      "foo",
      "bar",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 2`] = `
Array [
  Array [
    undefined,
    Array [
      "baz",
      "boo",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should convert to HTML PR for gitlab 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "<p>This Merge Request updates dependency <a href=\\"https://github.com/renovateapp/dummy\\">dummy</a> from <code>v1.0.0</code> to <code>v1.1.0</code></p>
<h1>Commits</h1>
**v1.1.0**
<ul>
<li><a href=\\"https://github.com/renovateapp/dummy/commit/abcdefghijklmnopqrstuvwxyz\\"><code>abcdefg</code></a> foo <a href=\\"https://github.com/renovateapp/dummy/issues/3\\">#3</a></li>
</ul>
<hr />
<p>This MR has been generated by <a href=\\"https://renovateapp.com\\">Renovate Bot</a>.</p>",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This Pull Request updates dependency [dummy](https://github.com/renovateapp/dummy) from \`v1.0.0\` to \`v1.1.0\`




<details>
<summary>Commits</summary>

#### v1.1.0
-   [\`abcdefg\`](https://github.com/renovateapp/dummy/commit/abcdefghijklmnopqrstuvwxyz) foo [#3](https://github.com/renovateapp/dummy/issues/3)

</details>



---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create privateRepo PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This Pull Request updates dependency [dummy](https://github.com/renovateapp/dummy) from \`v1.0.0\` to \`v1.1.0\`




<details>
<summary>Commits</summary>

#### v1.1.0
-   [\`abcdefg\`](https://github.com/renovateapp/dummy/commit/abcdefghijklmnopqrstuvwxyz) foo #&#8203;3

</details>



---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should return modified existing PR 1`] = `
Object {
  "body": "This Pull Request updates dependency [dummy](https://github.com/renovateapp/dummy) from \`v1.0.0\` to \`v1.1.0\`




<details>
<summary>Commits</summary>

#### v1.1.0
-   [\`abcdefg\`](https://github.com/renovateapp/dummy/commit/abcdefghijklmnopqrstuvwxyz) foo [#3](https://github.com/renovateapp/dummy/issues/3)

</details>



---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
  "displayNumber": "Existing PR",
  "title": "Update dependency dummy to v1.1.0",
}
`;

exports[`workers/pr ensurePr should return modified existing PR title 1`] = `
Object {
  "body": "This Pull Request updates dependency [dummy](https://github.com/renovateapp/dummy) from \`v1.0.0\` to \`v1.1.0\`




<details>
<summary>Commits</summary>

#### v1.1.0
-   [\`abcdefg\`](https://github.com/renovateapp/dummy/commit/abcdefghijklmnopqrstuvwxyz) foo [#3](https://github.com/renovateapp/dummy/issues/3)

</details>



---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
  "displayNumber": "Existing PR",
  "title": "wrong",
}
`;

exports[`workers/pr ensurePr should return unmodified existing PR 1`] = `Array []`;

exports[`workers/pr ensurePr should strip HTML PR for vsts 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This Pull Request updates dependency [dummy](https://github.com/renovateapp/dummy) from \`v1.0.0\` to \`v1.1.0\`





**Commits**

#### v1.1.0
-   [\`abcdefg\`](https://github.com/renovateapp/dummy/commit/abcdefghijklmnopqrstuvwxyz) foo [#3](https://github.com/renovateapp/dummy/issues/3)





---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
  Array [],
  false,
  false,
]
`;
